--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -12,7 +12,14 @@
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
-        <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
+        {% if workbook %}
+            <li><a href="{% url 'workbooks' %}">Saved Workbooks</a></li>
+            <li><a href="{% url 'worksheet_display' workbook.id worksheet.id %}">{{ workbook.name }}</a></li>
+        {% elif new_workbook %}
+            <li><a href="{% url 'gene_select_for_new_workbook' %}">Saved Gene Favorites</a></li>
+        {% else %}
+            <li><a href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Saved Gene Favorites</a></li>
+        {% endif %}
     </ol>
     <h1 class="page-header">Gene Favorite Details</h1>
 </div>
@@ -22,7 +29,6 @@
 
     <section class="panel panel-default">
         <div class="panel-heading">
-            <!--<p>Name of Favorite</p>-->
             <h4 class="panel-title">{{gene_favorite.name}}</h4>
         </div>
         <div class="panel-body">
@@ -36,19 +42,30 @@
             </div>
             <div>
                 <ul class="page-action-group">
-                    <li><a class="btn btn-info" href="{% url 'gene_fav_edit' gene_favorite.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
+                    {% if not workbook and not new_workbook %}
+                        <li><a class="btn btn-info" href="{% url 'gene_fav_edit' gene_favorite.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
+                        <li>
+                            <form action="{% url 'gene_fav_delete' gene_favorite.id %}" method="POST">
+                                {% csrf_token %}
+                                <input class="btn btn-info" type="submit" value="Delete">
+                            </form>
+                        </li>
+                    {% endif %}
                     <li>
-                        <form action="{% url 'gene_fav_delete' gene_favorite.id %}" method="POST">
-                            {% csrf_token %}
-                            <input class="btn btn-info" type="submit" value="Delete">
-                        </form>
-                    <li class="separator"></li>
-                    <li>
-                        <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
-                            {% csrf_token %}
-                            <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}">
-                            <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i> Start New Workbook</button>
-                        </form>
+                        {% if not workbook %}
+                            <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}">
+                                <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i>Apply to New Workbook</button>
+                            </form>
+                        {% else %}
+                            <form action="{% url 'worksheet_genes_edit' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}">
+                                <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i>Apply to Analysis</button>
+                                <a class="btn btn-info"  href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Back</a>
+                            </form>
+                        {% endif %}
                     </li>
                     <li class="pull-right"><a class="btn btn-link">View System Gene Identifier</a></li>
                 </ul>
