--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -66,7 +66,7 @@
                 </table>
             {% else %}
                 <br>
-                <p class="center">You don't have any gene favorites created yet. <br><a href="{% url 'gene_fav_create' %}" class="btn btn-link">Create Your Gene Favorite</a></p>
+                <p class="center">You don't have any gene favorites created yet. <br><a href="{% url 'gene_fav_create' %}" class="btn btn-link">Create A Gene Favorite</a></p>
                 <br>
             {% endif %}
         </div>
