--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -46,20 +46,11 @@
                 <ul class="page-action-group">
                     {% if not workbook and not new_workbook %}
                         <li><a class="btn btn-info" href="{% url 'gene_fav_edit' gene_favorite.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
-                        <li>
-                            <form action="{% url 'gene_fav_delete' gene_favorite.id %}" method="POST">
-                                {% csrf_token %}
-                                <input class="btn btn-info" type="submit" value="Delete">
-                            </form>
-                        </li>
+                        <li><a data-toggle="modal" data-target="#delete-favorite-modal" class="btn btn-info">Delete</a></li>
                     {% endif %}
-                    <li>
+                    <li role="menuitem">
                         {% if not workbook %}
-                            <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
-                                {% csrf_token %}
-                                <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}">
-                                <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i>Apply to New Workbook</button>
-                            </form>
+                            <a data-toggle="modal" data-target="#new-favorite-workbook-modal" class="btn btn-default">Apply to New Workbook</a>
                         {% else %}
                             <form action="{% url 'worksheet_genes_edit' workbook.id worksheet.id %}" method="POST">
                                 {% csrf_token %}
@@ -74,6 +65,48 @@
             </div>
         </div>
     </section>
+</div>
+    <!-- Delete variable modal -->
+<div class="modal fade" id="delete-favorite-modal" tabindex="-1" role="dialog" aria-labelledby="delete-favorite-header" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Delete this gene favorite "{{ gene_favorite.name|title }}"?</h4>
+            </div>
+            <form id="delete-workbook" method="POST" action="{% url 'gene_fav_delete' gene_favorite.id %}">
+                {% csrf_token %}
+                <div class="modal-footer">
+                    <input type="submit" value="Delete" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Create new workbook using favorite Modal -->
+<div class="modal fade" id="new-favorite-workbook-modal" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Create a new workbook using the gene favorite "{{ gene_favorite.name|title }}"</h4>
+            </div>
+            <form id="edit-workbook" method="POST" action="{% url 'worksheet_create_with_genes' %}">
+                {% csrf_token %}
+                <div class="modal-body">
+                    <label for="name">Name (required)</label>
+                    <input class="form-control" type="text" name="name" value="{{ gene_favorite.name }} workbook"/>
+                    <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}" />
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" value="Create Workbook" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
