--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -38,22 +38,9 @@
                                     <div class="dropdown">
                                         <a data-target="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-caret-down"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li>
-                                                <a style="color: #49AFCD; padding-left: 13px;" href="{% url 'gene_fav_edit' genes_fav.id %}">Edit</a>
-                                            </li>
-                                            <li>
-                                                <form action="{% url 'gene_fav_delete' genes_fav.id %}" method="POST">
-                                                    {% csrf_token %}
-                                                    <input class="btn btn-link" type="submit" value="Delete">
-                                                </form>
-                                            </li>
-                                            <li>
-                                                <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
-                                                    {% csrf_token %}
-                                                    <button class="btn btn-link" type="submit"> Start New Workbook</button>
-                                                    <input type="hidden" name="gene_list_id" value="{{ genes_fav.id }}">
-                                                </form>
-                                            </li>
+                                            <li><a href="{% url 'gene_fav_edit' genes_fav.id %}">Edit</a></li>
+                                            <li><a data-toggle="modal" role="button" data-target="#delete-favorite-modal-{{ genes_fav.id }}" >Delete</a></li>
+                                            <li><a data-toggle="modal" role="button" data-target="#new-favorite-workbook-modal-{{ genes_fav.id }}" >Start New Workbook</a></li>
                                         </ul>
                                     </div>
                                 </td>
@@ -61,6 +48,7 @@
                                 <td>{{genes_fav.genes | length}}</td>
                                 <td>{{genes_fav.last_date_saved}}</td>
                             </tr>
+                            {% include "genes/genes_list_modals.html" with favorite=genes_fav %}
                         {% endfor %}
                     </tbody>
                 </table>
