added population and validation of full gene list based on the gene_names on the metadata tables. close #60

--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -98,6 +98,7 @@
     </section>
 </div>
 <script type="text/javascript">
+    var base_url = '{{ base_url|safe }}';
     {% if gene_favorite %}
         var gene_fav = { genes : {{ genes }} };
     {% else %}
