completed look up and validation of gene symbol names for gene lists

--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -8,6 +8,7 @@
 {% block page_name %}genes_edit{% endblock %}
 
 {% block page_header %}
+<link type="text/css" rel="stylesheet" href="{% static 'css/token-typeahead.css' %}" />
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
