--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -90,7 +90,7 @@
                         <li role="menuitem">
                             <input type="submit" value="Save as Favorite" class="btn btn-primary"/>
                         </li>
-                        <li role="menuitem"><a href="{% url 'gene_select_for_new_workbook' %}">Cancel</a></li>
+                        <li role="menuitem"><a href="{% url 'genes' %}">Cancel</a></li>
                     {% endif %}
                     <menuitem class="btn btn-link pull-right"><a href="http://www.genenames.org/" target="_blank">View Gene Identifiers</a></menuitem>
                 </ul>
