-> Changed 'Apply to Analysis' (and 'Apply to New Analysis' though that never seems to be used) to 'Apply to Worksheet' on gene_sleect and variable_select -> Changed the corresponding button IDs to 'addToWorksheet' and 'addToNewWorksheet'

--- a/templates/genes/genes_select.html
+++ b/templates/genes/genes_select.html
@@ -28,9 +28,9 @@
                 <div class="page-action-group">
                     <li role="menuitem">
                         {% if workbook %}
-                            <button id="addToAnalysis" class="btn btn-default">Apply to Analysis</button>
+                            <button id="addToWorksheet" class="btn btn-default">Apply to Worksheet</button>
                         {% else %}
-                            <button id="addToNewAnalysis" class="btn btn-default">Apply to New Analysis</button>
+                            <button id="addToNewWorksheet" class="btn btn-default">Apply to New Worksheet</button>
                         {% endif %}
                     </li>
                     <li role="menuitem">
