--- a/templates/genes/genes_select.html
+++ b/templates/genes/genes_select.html
@@ -62,7 +62,7 @@
                                      <td class="name-col"><a href="{% url 'gene_detail_for_new_workbook' genes_fav.id %}">{{genes_fav.name}}</a></td>
                                 {% endif %}
                                 <td>{{genes_fav.genes | length}}</td>
-                                <td>{{genes_fav.last_date_saved}}</td>
+                                <td>{{genes_fav.last_date_saved|date:'M d, Y, g:i a'}}</td>
                             </tr>
                         {% endfor %}
                         <input type="hidden" id="workbook_id" value="{{ workbook.id }}"/>
