--- a/templates/genes/genes_select.html
+++ b/templates/genes/genes_select.html
@@ -28,9 +28,9 @@
                 <div class="page-action-group">
                     <li role="menuitem">
                         {% if workbook %}
-                            <button id="addToWorksheet" class="btn btn-default">Apply to Worksheet</button>
+                            <button id="addToWorksheet" class="btn btn-primary">Apply to Worksheet</button>
                         {% else %}
-                            <button id="addToNewWorksheet" class="btn btn-default">Apply to New Worksheet</button>
+                            <button id="addToNewWorksheet" class="btn btn-primary">Apply to New Worksheet</button>
                         {% endif %}
                     </li>
                     <li role="menuitem">
