--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -48,7 +48,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="genes-name">Name of Favorite (Required)</label>
-                    <input class="form-control" type="text" value="{% if 'gene_fav_detail' %}{{gene_favorite.name}}{% endif %} " name="genes-name" required>
+                    <input id="genes-list-name" class="form-control" type="text" value="{% if 'gene_fav_detail' %}{{gene_favorite.name}}{% endif %}" name="genes-name" required>
                 </div>
 
                 <div class="form-group">
