--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -22,7 +22,7 @@
     <div class="panel penel-default">
         <div class="panel-body">
             {% if gene_fav_list %}
-                <table class="table table-striped tablesorter">
+                <table id="gene-list-table" class="table table-striped tablesorter">
                     <thead>
                         <tr>
                             <th></th>
