--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -80,17 +80,17 @@
                         <li role="menuitem">
                             <input type="submit" value="Save Changes" class="btn btn-primary"/>
                         </li>
-                        <li role="menuitem"><menuitem class="btn btn-link"><a href="{% url 'gene_fav_detail' gene_favorite.id %}">Cancel</a></menuitem></li>
+                        <li role="menuitem"><menuitem class="btn btn-link"><a class="cancel-edit" href="{% url 'gene_fav_detail' gene_favorite.id %}">Cancel</a></menuitem></li>
                     {% elif workbook %}
                         <li role="menuitem">
                             <input type="submit" value="Apply to Worksheet" class="btn btn-primary"/>
                         </li>
-                        <li role="menuitem"><a href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Cancel</a></li>
+                        <li role="menuitem"><a class="cancel-edit" href="{% url 'gene_select_for_existing_workbook' workbook.id worksheet.id %}">Cancel</a></li>
                     {% else %}
                         <li role="menuitem">
                             <input type="submit" value="Save as Favorite" class="btn btn-primary"/>
                         </li>
-                        <li role="menuitem"><a href="{% url 'genes' %}">Cancel</a></li>
+                        <li role="menuitem"><a class="cencel-edit" href="{% url 'genes' %}">Cancel</a></li>
                     {% endif %}
                     <menuitem class="btn btn-link pull-right"><a href="http://www.genenames.org/" target="_blank">View Gene Identifiers</a></menuitem>
                 </ul>
