--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -59,6 +59,10 @@
 {% block content %}
 {% csrf_token %}
     <section class="col-lg-12">
+        <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            Your variable list's name contains invalid characters (<span class="unallowed-chars"></span>). Please choose another name.
+        </div>
          <div class="panel form-group panel-default">
             {% if existing_variable_list %}
                 <div class="panel-heading">
@@ -265,7 +269,7 @@
                     <div class="panel-body">
                         {% if existing_variable_list %}
                             {% for variable in existing_variable_list.variable_set.all %}
-                                <span class="selected-variable" data-name="{{ variable.name }}" data-code="{{ variable.code }}" data-feature-id="{{ variable.feature_id }}">
+                                <span class="selected-variable" data-type="{{ variable.type }}" data-name="{{ variable.name }}" data-code="{{ variable.code }}" data-feature-id="{{ variable.feature_id }}">
                                     <a class="delete-x filter-label label label-default">
                                         {{ variable.name }}
                                         <i class="fa fa-times"></i>
