-> User data uploads will now validate project and study names for XSS vulnerabilities -> Made the note to double-check file format look less like an error

--- a/blink_sass/pages/_projects.sass
+++ b/blink_sass/pages/_projects.sass
@@ -26,8 +26,8 @@
 
       .low-level-hide
         display: none
-  .fa-exclamation-circle
-    color: $danger-bgcolor-dark
+  .fa-tag
+    color: $isb-primary
 
 .column-definitions
   margin: 25px 15px
