--- a/static/templates/upload_file_list_item.html
+++ b/static/templates/upload_file_list_item.html
@@ -11,7 +11,7 @@
             <option value="protein">Protein Expression</option>
             <option value="user_gen">Other</option>
         </select>
-        <span class="file-format-check" style="visibility:hidden;"><i class="fa fa-exclamation-circle"></i> Please verify that your file fits the expected format.</span>
+        <span class="file-format-check" style="visibility:hidden;"><i class="fa fa-tag"></i> <i>Double-check that your file fits the expected format before continuing.</i></span>
     </td>
     <td>
         <a href="#" class="close-btn pull-right"><i class="fa fa-close"></i><span class="sr-only">Remove File</span></a>
