--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -94,7 +94,7 @@
                         <li role="menuitem">
                             <input type="submit" value="Save as Favorite" class="btn btn-primary"/>
                         </li>
-                        <li role="menuitem"><a class="cencel-edit" href="{% url 'genes' %}">Cancel</a></li>
+                        <li role="menuitem"><a class="cancel-edit" href="{% url 'genes' %}">Cancel</a></li>
                     {% endif %}
                     <menuitem class="btn btn-link pull-right"><a href="http://www.genenames.org/" target="_blank">View Gene Identifiers</a></menuitem>
                 </ul>
