-> Typo in class

--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -36,7 +36,7 @@
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         Your gene & miRNA list's name contains invalid characters (<span class="unallowed-chars"></span>). Please choose another name.
     </div>
-    <section class="panel panel-defaul">
+    <section class="panel panel-default">
         <div class="panel-heading">
         </div>
         <div class="panel-body">
