--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -96,8 +96,8 @@
                         </li>
                         <li role="menuitem"><a class="cencel-edit" href="{% url 'genes' %}">Cancel</a></li>
                     {% endif %}
-                    <menuitem class="btn btn-link pull-right"><a href="http://www.genenames.org/" target="_blank">View Gene Identifiers</a></menuitem>
-                    <menuitem class="btn btn-link pull-right"><a href="http://www.mirbase.org/cgi-bin/mirna_summary.pl?org=hsa" target="_blank">View miRNA Identifiers</a></menuitem>
+                    <menuitem class="btn nocap btn-link pull-right"><a href="http://www.genenames.org/" target="_blank">View Gene Identifiers</a></menuitem>
+                    <menuitem class="btn nocap btn-link pull-right"><a href="http://www.mirbase.org/cgi-bin/mirna_summary.pl?org=hsa" target="_blank">View miRNA Identifiers</a></menuitem>
                 </ul>
             </form>
         </div>
