--- a/templates/genes/genes_list_modals.html
+++ b/templates/genes/genes_list_modals.html
@@ -28,8 +28,8 @@
             <form id="edit-workbook" method="POST" action="{% url 'worksheet_create_with_genes' %}">
                 {% csrf_token %}
                 <div class="modal-body">
-                    <label for="list_name">Name (required)</label>
-                    <input id="list_name" class="form-control" type="text" name="name" value="{{ favorite.name }} workbook"/>
+                    <label for="list_name-{{ favorite.id }}">Name (required)</label>
+                    <input id="list_name-{{ favorite.id }}" class="form-control" type="text" name="name" value="{{ favorite.name }} workbook"/>
                     <input type="hidden" name="gene_list_id" value="{{ favorite.id }}" />
                 </div>
                 <div class="modal-footer">
