--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -75,7 +75,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 id="delete-favorite-header" class="modal-title">Delete this gene & miRNA favorite "{{ gene_favorite.name|title }}"?</h4>
             </div>
-            <form id="delete-workbook" method="POST" action="{% url 'gene_fav_delete' gene_favorite.id %}">
+            <form id="delete-favorite" method="POST" action="{% url 'gene_fav_delete' gene_favorite.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
