--- a/templates/genes/genes_list_modals.html
+++ b/templates/genes/genes_list_modals.html
@@ -6,7 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 id="delete-gene-fave-header" class="modal-title">Delete the gene & miRNA favorite "{{ favorite.name|title }}"?</h4>
             </div>
-            <form id="delete-workbook" method="POST" action="{% url 'gene_fav_delete' favorite.id %}">
+            <form id="delete-gene-fave" method="POST" action="{% url 'gene_fav_delete' favorite.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
