--- a/templates/genes/genes_list_modals.html
+++ b/templates/genes/genes_list_modals.html
@@ -4,9 +4,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 id="delete-gene-fave-header" class="modal-title">Delete the gene & miRNA favorite "{{ favorite.name|title }}"?</h4>
+                <h4 id="delete-gene-fave-{{ favorite.id }}-header" class="modal-title">Delete the gene & miRNA favorite "{{ favorite.name|title }}"?</h4>
             </div>
-            <form id="delete-gene-fave" method="POST" action="{% url 'gene_fav_delete' favorite.id %}">
+            <form id="delete-gene-fave-{{ favorite.id }}" method="POST" action="{% url 'gene_fav_delete' favorite.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
@@ -29,7 +29,7 @@
                 {% csrf_token %}
                 <div class="modal-body">
                     <div id="{{ favorite.id }}-unallowed-chars-alert" class="unallowed-chars-wb-alert alert alert-warning alert-dismissable" style="display: none;">
-                        <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only data-hide">Close</span></button>
+                        <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                         Your workbook's name contains invalid characters (<span class="unallowed-chars-wb"></span>). Please choose another name.
                     </div>
                     <label for="workbook-name-{{ favorite.id }}">Name (required)</label>
