--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -115,4 +115,4 @@
 </div>
 {% endblock %}
 
-{% block js_file %}{% static 'js/genes/genes_detail.js' %}{% endblock %}
+{% block js_file %}{% static 'js/form_utils.js' %}{% endblock %}
