--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -65,4 +65,4 @@
 
 {% endblock %}
 
-{% block js_file %}{% static 'js/genes/genes_detail.js' %}{% endblock %}
+{% block js_file %}{% static 'js/form_utils.js' %}{% endblock %}
